# university-enrollee-apllication-algorithm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
scripts/: PackUniversity.sh  TestUEADB.sh
sources/: CMakeLists.txt
sources/Dependencies/: CMakeLists.txt
sources/Dependencies/CrossPlatformMain/: CrossPlatformMain.hpp
sources/Dependencies/SQLite3/: CMakeLists.txt
sources/Dependencies/SQLite3pp/: CMakeLists.txt  sqlite3pp.h
sources/Dependencies/TinyXML2/: CMakeLists.txt
sources/EnrolleeRandomizer/: CMakeLists.txt  EnrolleeRandomizer.cpp  EnrolleeRandomizer.hpp  Main.cpp
sources/SQLDBAdapter/: CMakeLists.txt  ErrorCodes.hpp  SQLDBAdapter.cpp  SQLDBAdapter.hpp  SQLDBLoader.cpp  SQLDBLoader.hpp  SQLDBSaver.cpp  SQLDBSaver.hpp  XMLUtils.cpp  XMLUtils.hpp
sources/Tests/: CMakeLists.txt
sources/Tests/TestEnrollee/: CMakeLists.txt  TestEnrollee.cpp
sources/Tests/TestEnrolleeComparision/: CMakeLists.txt  TestEnrolleeComparision.cpp
sources/Tests/TestHashing/: CMakeLists.txt  TestHashing.cpp
sources/Tests/TestSharedPointer/: CMakeLists.txt  TestSharedPointer.cpp
sources/Tests/TestSpecialty/: CMakeLists.txt  TestSpecialty.cpp
sources/Tests/TestUniversity/: CMakeLists.txt  TestUniversity.cpp  TestUniversity.hpp
sources/Tests/TestXMLIO/: CMakeLists.txt  TestXMLIO.cpp  TestXMLIO.hpp
sources/Tests/TestXMLSerialization/: CMakeLists.txt  TestXMLSerialization.cpp  TestXMLSerialization.hpp
sources/UEAA/: BuildConfiguration.hpp.cmake  CMakeLists.txt
sources/UEAA/Core/Enrollee/: Enrollee.cpp  Enrollee.hpp  EnrolleeChoice.cpp  EnrolleeChoice.hpp  EnrolleeChoise.cpp  EnrolleeChoise.hpp  EnrolleeHelpers.cpp  EnrolleeHelpers.hpp  RODType.cpp  RODType.hpp  RepublicanOlympiadDiplomaType.cpp  RepublicanOlympiadDiplomaType.hpp  StudyForm.hpp
sources/UEAA/Core/University/: Faculty.cpp  Faculty.hpp  Specialty.cpp  Specialty.hpp  University.cpp  University.hpp
sources/UEAA/Utils/: CStringToHash.cpp  CStringToHash.hpp  DeHashTable.cpp  DeHashTable.hpp  ReferenceCounted.cpp  ReferenceCounted.hpp  SharedPointer.hpp  XMLIO.cpp  XMLIO.hpp  XMLSerializable.cpp  XMLSerializable.hpp
sources/UEADB/: CMakeLists.txt
sources/UEADB/CommandsExecutors/: AddEnrollee.cpp  AddEnrollee.hpp  AddSpecialty.cpp  AddSpecialty.hpp  LoadUniversity.cpp  LoadUniversity.hpp  NewFaculty.cpp  NewFaculty.hpp  ProcessApplication.cpp  ProcessApplication.hpp  RemoveEnrollee.cpp  RemoveEnrollee.hpp  RemoveFaculty.cpp  RemoveFaculty.hpp  RemoveSpecialty.cpp  RemoveSpecialty.hpp  SaveUniversity.cpp  SaveUniversity.hpp
sources/UEADB/Core/: Application.cpp  Application.hpp  CommandsUtils.cpp.cmake  CommandsUtils.hpp  ErrorCodes.hpp  Main.cpp  SetupCommandsExecutors.cpp.cmake  SetupCommandsExecutors.hpp  SharedContextGlobalKeys.hpp  TypeDefs.hpp
sources/UEADB/Utils/: CommandsUtils.cpp.cmake  CommandsUtils.hpp  ReferenceCountedList.hpp
sources/UniversityEnrolleeApllicationAlgorithm/: CMakeLists.txt
sources/UniversityEnrolleeApllicationAlgorithm/Core/: Enrollee.cpp  Enrollee.hpp  EnrolleeChoise.cpp  EnrolleeChoise.hpp
sources/UniversityEnrolleeApllicationAlgorithm/Core/Enrollee/: Enrollee.cpp  Enrollee.hpp  EnrolleeChoise.hpp  EnrolleeHelpers.cpp  EnrolleeHelpers.hpp  StudyForm.hpp
sources/UniversityEnrolleeApllicationAlgorithm/Core/University/: Specialty.cpp  Specialty.hpp
sources/UniversityEnrolleeApllicationAlgorithm/Utils/: CStringToHash.cpp  CStringToHash.hpp  ReferenceCounted.cpp  ReferenceCounted.hpp  SharedPointer.hpp
